update api docs and login fields name
